Fix  gap between logo and link list items with the followwing changes:          Changed grid-template-columns from auto 1fr to auto auto. Specify full height of the container with 100vh which makes the header <dv> very large. This is fixed by changing to 100% instead. Also, Added column-gap to header to adjust gap between logo and link list items whiles the gap between the individual list items(.menu items) also modified with the grid, gap property. Again, the font-size of the container div was also decreased to reduce the font-size of the header logo and added gird justify-item stretch property..

--- a/layout-3/index.css
+++ b/layout-3/index.css
@@ -23,8 +23,11 @@
     grid-column-start: 1;
     grid-column-end: -1;
     grid-row-start: 1;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: auto auto;
+    justify-items: stretch;
     align-items: center;
+    column-gap: 250px;
+    height: 100%;
     background-color: #393f4d;
   }
   
@@ -33,6 +36,7 @@
     grid-auto-flow: column; 
     gap: 1rem; 
     padding: 0; 
+    gap: 60px;
     margin: 0; 
     list-style: none; 
   }
